Модель и API для приемника данных
