# api/router.go
@@ -26,7 +26,15 @@ func CreateRouter(handler *apiHandler, UIFiles embed.FS) *mux.Router {
 	router.Handle("/api/team/{teamId}/tasks/{taskId}", handler.TaskDelete()).Methods(http.MethodDelete)
 	router.Handle("/api/team/{teamId}/tasks/{taskId}/history", handler.HistoryList()).Methods(http.MethodGet)
 	router.Handle("/api/team/{teamId}/tasks/{taskId}/run", handler.TaskRun()).Methods(http.MethodPost)
+
 	router.Handle("/api/team/{teamId}/sendMessage", handler.MessageSend()).Methods(http.MethodPost)
+
+	router.Handle("/api/team/{teamId}/receivers", handler.ReceiverList()).Methods(http.MethodGet)
+	router.Handle("/api/team/{teamId}/receivers", handler.ReceiverAdd()).Methods(http.MethodPost)
+	router.Handle("/api/team/{teamId}/receivers/{receiverId}", handler.ReceiverGet()).Methods(http.MethodGet)
+	router.Handle("/api/team/{teamId}/receivers/{receiverId}", handler.ReceiverEdit()).Methods(http.MethodPatch)
+	router.Handle("/api/team/{teamId}/receivers/{receiverId}", handler.ReceiverDelete()).Methods(http.MethodDelete)
+	router.Handle("/api/team/{teamId}/receive", handler.Receive())
 	router.Use(mux.CORSMethodMiddleware(router))
 
 	spaHandler := SpaHandler{StaticPath: "ui/build", IndexPath: "index.html", Files: UIFiles}
